Fix: Removed extra padding from navigation bar

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     width: 100%;
     padding: 2rem 0;
+    padding-bottom: 1rem;
 }
 
 @keyframes textShine {
